# Agentic-AI-With-CrewAI

./: README.md  pyproject.toml
R-ecommerce-output-gemini-2.5-pro/: app.py  ecommerce.py  ecommerce.py_design.md  test_ecommerce.py
R-quiz-output-gemini-2.5-flash/: app.py  quiz.py  quiz.py_design.md  test_quiz.py
R-todo-output-gemini-2.5-pro-hierarchial/: todo.py  todo.py_design.md
output/: app.py
src/presidio/: crew.py  main.py
