[project]
name = "presidio"
version = "0.1.0"
description = "presidio using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.201.1,<1.0.0"
]

[project.scripts]
presidio = "presidio.main:run"
run_crew = "presidio.main:run"
train = "presidio.main:train"
replay = "presidio.main:replay"
test = "presidio.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
